--- a/css/style.css
+++ b/css/style.css
@@ -125,6 +125,7 @@ h1 {
     border: 1px solid #1085e4;
     border-radius: 30px;
     letter-spacing: 2.5px;
+    transition: 0.3s;
 }
 .btn-primary:hover {
     background: #fff;
@@ -140,6 +141,7 @@ h1 {
     border: 1px solid #cbdbe8;
     border-radius: 30px;
     letter-spacing: 2.5px;
+    transition: 0.3s;
 }
 .btn-secondary:hover {
     background: #fff;
@@ -164,6 +166,7 @@ h1 {
     padding: 20px 40px;
     border-radius: 30px;
     text-transform: uppercase;
+    transition: 0.3s;
 }
 .btn-info:hover {
     background:  #1085e4;
@@ -214,6 +217,8 @@ h1 {
                         "d f g"
                         "e f g"
                         "e h h";
+    grid-gap: 35px;
+    grid-template-columns: 1fr 1fr 1fr;
     max-width: 1110px;
     margin: 0 auto;
     
@@ -250,6 +255,7 @@ h1 {
     line-height: 1.2;
     letter-spacing: -1px;
     max-width: 260px;
+    margin-top: 0;
 }
 .grid h2 span {
     font-size: 14px;
@@ -261,8 +267,8 @@ h1 {
 }
 .grid-item {
     text-align: center;
-    box-shadow: 0 0 41px #f4f4f4;
     padding: 80px 40px;
+    box-shadow: 0 9px 20px #f4f4f4;
 }
 .grid-item h3 {
     font-size: 20px;
@@ -279,40 +285,36 @@ h1 {
     background-repeat: no-repeat;
     display: block;
     margin: 0 auto 36px;
-    box-shadow: 0 0 5px #f4f4f4;
+    height: 92px;
+    background-position: center;
 }
 .grid-icon-1 {
     background-image: url(../img/Icon-2.png);
-    width: 89px;
-    height: 85px;
+    background-size: 73px 79px;
 
 }
 .grid-icon-2 {
     background-image: url(../img/Icon-3.png);
-    width: 89px;
-    height: 85px;
+    background-size: 89px 85px;
 
 }
 .grid-icon-3 {
     background-image: url(../img/Icon-1.png);
-    width: 79px;
-    height: 82px;
+    background-size: 79px 82px;
 }
 .grid-icon-4 {
     background-image: url(../img/Icon-4.png);
-    width: 109px;
-    height: 92px;
+    background-size: 109px 92px;
 }
 .grid-icon-5 {
     background-image: url(../img/Icon-5.png);
-    width: 85px;
-    height: 90px;
+    background-size: 85px 90px;
 }
 .grid-icon-6 {
     background-image: url(../img/Icon-6.png);
-    width: 100px;
-    height: 87px;
+    background-size: 100px 87px;
 }
+
 .grid-text-name {
     color: #192b59;
     font-size: 16px;
@@ -323,9 +325,66 @@ h1 {
     font-size: 14px;
     letter-spacing: 0;
 }
+.page-softwere-flex {
+    display: flex;
+    justify-content: flex-end;
+}
+.page-softwere-img {
+    display: block;
+    background-image: url(../img/page-softwere-img.png);
+    background-repeat: no-repeat;
+    width: 946px;
+    height: 760px;
+    position: absolute;
+    left: 0;
+    top: 118px;
+}
+.page-softwere-flex>div {
+    flex-basis: 55%;
+}
+.page-softwere-icon {
+    display: block;
+    background-image: url(../img/softwere-icon.png);
+    background-repeat: no-repeat;
+    width: 117px;
+    height: 98px;
+    background-position: -28px 0;
+}
+.page-softwere-list dt {
+    font-weight: 700;
+    color: #5a6789;
+    margin-bottom: 10px;
+}
+.page-softwere-list dd {
+    margin-left: 0;
+    margin-bottom: 50px;
+    font-size: 14px;
+    line-height: 1.8;
+}
+.page-softwere-flex .title-h2 {
+    max-width: 766px;
+    margin-top: 0;
+    margin-bottom: 26px;
+    letter-spacing: -1px;
+}
+.page-softwere-list {
+    margin-top: 31px;
+    height: 320px;
+    overflow: hidden;
+    overflow-y: scroll;
+    
+}
+.page-softwere-list::-webkit-scrollbar { width: 4px; height: 3px;}
+.page-softwere-list::-webkit-scrollbar-track-piece { background-color: #f3f6ff;}
+.page-softwere-list::-webkit-scrollbar-thumb { height: 56px; background-color: #1085e4; border-radius: 10px;}
+
+
 .box-subscribe {
     display: flex;
     justify-content: space-between;
+}
+.box-subscribe img {
+    filter:grayscale(100%);
 }
 .subscribe-item {
     padding: 58px 0;
@@ -436,6 +495,7 @@ h1 {
     padding-left: 63px;
     padding-right: 63px;
     letter-spacing: 2px;
+    flex-basis: 32%;
 }
 .box-price .starter {
     font-size: 14px;
@@ -511,4 +571,11 @@ h1 {
 
 .page-plan, .page-screen {
     text-align: center;
+}
+.page-softwere {
+    padding: 121px 0 166px 0;
+    background-image: url(../img/bg4.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
 }
